<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfileActivity"
    tools:showIn="@layout/activity_my_profile">

    <ImageView
        android:id="@+id/imageView_my_photo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fantwi"
        tools:srcCompat="@drawable/fantwi" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_my_photo" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/profile_track"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/profile_country"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_track"
        app:layout_constraintStart_toStartOf="@+id/textView_track"
        app:layout_constraintTop_toBottomOf="@+id/textView_track" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/profile_email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_country"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView_country"
        app:layout_constraintTop_toBottomOf="@+id/textView_country" />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/profile_phone"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_email"
        app:layout_constraintStart_toStartOf="@+id/textView_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_email" />

    <TextView
        android:id="@+id/textView_slack_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/profile_slack_username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_phone"
        app:layout_constraintStart_toStartOf="@+id/textView_phone"
        app:layout_constraintTop_toBottomOf="@+id/textView_phone" />
</android.support.constraint.ConstraintLayout>